# joint_comm_server

./: CMakeLists.txt  README.md  build.sh  run.sh  task.sh
3rd/lib/: libnghttp2.so.14.21.1
config/: engine.json  service.json  tcp_client.json
deploy/: setup_env.sh
release/: benchmark.sh
release/config/: engine.json  tcp_server.json
release/deploy/: setup_env.sh
release/lib/: libboost_thread.so.1.77.0
src/: AppDefine.h  AppManager.cpp  AppManager.h  Main.cpp  main.cpp
src/core/base/: Component.cpp  Component.h  Context.h  Service.h  Task.h  Thread.cpp  Thread.h
src/core/log/: LogDefine.h
src/core/operator/: Engine.cpp  Engine.h  Worker.cpp  Worker.h
src/core/protocol/: ProtocolDefine.h  TcpServer.cpp  TcpServer.h
src/http/: HttpContext.cpp  HttpContext.h  HttpServer.cpp  HttpServer.h
src/log/: LogDefine.h
src/profile/: Profile.cpp  Profile.h
src/service/: ServiceDefine.h  TcpReadService.cpp  TcpReadService.h  TcpService.cpp  TcpService.h
src/service/authentication/: AuthenticateService.cpp  LoginService.cpp
src/service/connection/: SocketReadService.cpp  TcpReadService.cpp
src/tcp/: Connection.cpp  Connection.h  Message.cpp  Message.h  ReadContext.h  SocketReadContext.h  TCPMessage.cpp  TCPMessage.h  TcpClient.cpp  TcpClient.h  TcpContext.cpp  TcpContext.h  TcpServer.cpp  TcpServer.h
src/util/: Define.h  Utils.cpp  Utils.h
src/utils/: Define.h  Utils.cpp  Utils.h
